--- a/gizmo_coach/CMakeLists.txt
+++ b/gizmo_coach/CMakeLists.txt
@@ -4,6 +4,11 @@ project(gizmo_coach LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Force Release subdirectory on all platforms (like MSVC does)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Release)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Release)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Release)
+
 
 # -----------------------------------------------------------------------------
 # JSON (nlohmann) via FetchContent
